--- a/CopenhagenRun/Resourses/Base.lproj/Main.storyboard
+++ b/CopenhagenRun/Resourses/Base.lproj/Main.storyboard
@@ -20,12 +20,47 @@
                     <view key="view" contentMode="scaleToFill" id="frb-i2-N9t">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="COPENHAGEN RUN" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jHv-ld-PRU">
+                                <rect key="frame" x="0.0" y="20" width="375" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="i0f-2n-RS8"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="28"/>
+                                <color key="textColor" red="0.43994105804443207" green="1" blue="0.49509202240398198" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Zv-hq-wt2">
+                                <rect key="frame" x="30" y="90" width="315" height="60"/>
+                                <color key="backgroundColor" red="0.439941058" green="1" blue="0.4950920224" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="66f-3Y-GiW"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="25"/>
+                                <state key="normal" title="START!">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <integer key="value" value="30"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="0Zv-hq-wt2" secondAttribute="trailing" constant="30" id="5lU-1t-02O"/>
+                            <constraint firstAttribute="trailing" secondItem="jHv-ld-PRU" secondAttribute="trailing" id="8GQ-3L-RBA"/>
+                            <constraint firstItem="jHv-ld-PRU" firstAttribute="leading" secondItem="frb-i2-N9t" secondAttribute="leading" id="IU7-xA-5Ys"/>
+                            <constraint firstItem="jHv-ld-PRU" firstAttribute="top" secondItem="xQw-GK-tL3" secondAttribute="bottom" id="t2A-8T-UZI"/>
+                            <constraint firstItem="0Zv-hq-wt2" firstAttribute="top" secondItem="jHv-ld-PRU" secondAttribute="bottom" constant="30" id="tpV-n4-7PR"/>
+                            <constraint firstItem="0Zv-hq-wt2" firstAttribute="leading" secondItem="frb-i2-N9t" secondAttribute="leading" constant="30" id="uMX-Tc-XAF"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="d7V-fD-yka" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="62" y="153"/>
+            <point key="canvasLocation" x="61.600000000000001" y="152.47376311844079"/>
         </scene>
         <!--Exercise View Controller-->
         <scene sceneID="tne-QT-ifu">
