--- a/CopenhagenRun/Resourses/Base.lproj/Main.storyboard
+++ b/CopenhagenRun/Resourses/Base.lproj/Main.storyboard
@@ -45,6 +45,9 @@
                                         <integer key="value" value="30"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <segue destination="BYZ-38-t0r" kind="presentation" identifier="startSegue" id="33V-pr-Fxz"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
@@ -123,15 +126,41 @@
                                     <action selector="startButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ptr-0Q-YH3"/>
                                 </connections>
                             </button>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="QOd-aP-dPT">
+                                <rect key="frame" x="0.0" y="20" width="375" height="80"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="80" id="VIb-wV-lKC"/>
+                                </constraints>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="c95-ee-MHg">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="jPV-xi-LxR">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </view>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="okp-5h-QH9" secondAttribute="bottom" constant="70" id="4u2-PW-Fsg"/>
                             <constraint firstAttribute="trailing" secondItem="cqs-Mf-KmW" secondAttribute="trailing" constant="30" id="HzB-4g-0tw"/>
+                            <constraint firstAttribute="trailing" secondItem="QOd-aP-dPT" secondAttribute="trailing" id="Y5f-pU-3LU"/>
                             <constraint firstItem="cqs-Mf-KmW" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="30" id="cRx-8m-EQa"/>
+                            <constraint firstItem="QOd-aP-dPT" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="eKP-2r-gUF"/>
                             <constraint firstItem="okp-5h-QH9" firstAttribute="top" secondItem="cqs-Mf-KmW" secondAttribute="bottom" constant="62" id="gIb-8s-JEa"/>
                             <constraint firstItem="okp-5h-QH9" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="gqa-z2-bQJ"/>
                             <constraint firstItem="cqs-Mf-KmW" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="k59-jP-T6t"/>
+                            <constraint firstItem="QOd-aP-dPT" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="l4Y-fG-NFc"/>
                         </constraints>
                     </view>
                     <connections>
