--- a/CopenhagenRun/Resourses/Base.lproj/Main.storyboard
+++ b/CopenhagenRun/Resourses/Base.lproj/Main.storyboard
@@ -138,16 +138,11 @@
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="jPV-xi-LxR">
-                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </view>
-                                    </collectionViewCell>
-                                </cells>
+                                <cells/>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="fSn-JY-e2Q"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="vfW-06-6a2"/>
+                                </connections>
                             </collectionView>
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -164,6 +159,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="cycleCollectionView" destination="QOd-aP-dPT" id="Ikj-x3-bxA"/>
                         <outlet property="progressRing" destination="cqs-Mf-KmW" id="kM7-mL-5WN"/>
                     </connections>
                 </viewController>
